--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mqtt": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-draggable": "^3.3.2",
     "react-scripts": "3.0.1"
   },
   "scripts": {
