--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.2",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
