--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.2",
+    "react-iframe": "^1.8.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
     "reactjs-popup": "^1.5.0"
   },
